# pilot-ai-drill

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: baseline_models_metadata.json  cleaning_metadata.json  feature_engineering_metadata.json  feature_fixes_metadata.json  feature_importance.csv  feature_importance_selected.csv  feature_selection_comparison.csv  feature_selection_metadata.json  model_comparison.csv  test_data.csv  test_data_fixed.csv  train_data.csv  train_data_fixed.csv  train_metrics.csv  val_data.csv  val_data_fixed.csv  well_data_clean.csv  well_data_cleaned.csv  well_data_features.csv  well_data_features_fixed.csv  well_data_metadata.json
docs/: boceto1.md  doc1.md  doc2.md  estrategy.md  life-cycle-ml.md  ml-options.md  ml.md  phase-0.md  services-layer.md
models/: elasticnet.pkl  gradient_boosting.pkl  lasso.pkl  lightgbm.pkl  lightgbm_selected.pkl  ridge.pkl  robust_scaler.pkl  xgboost.pkl
notebook/data-processing/: data-loading.ipynb
notebooks/: 01_data_loading.ipynb  02_eda.ipynb  03_data_cleaning.ipynb  04_feature_engineering.ipynb  04b_feature_engineering_fixes.ipynb  05_baseline_models.ipynb  06_feature_selection.ipynb
